--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <version>3.0.0-M5</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>AllTestSuite.xml</suiteXmlFile>
+            <suiteXmlFile>AllSuitesTest.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
